--- a/app/templates/products.html
+++ b/app/templates/products.html
@@ -1,5 +1,14 @@
-{% extends "base.html" %}
-{% block title %}Page Title{% endblock %}
+{% extends 'base.html' %}
+
+{% block title %}
+Our Products - Haircut Saloon
+{% endblock %}
+
 {% block content %}
-<h2>Products</h2>
+  <h1>Our Products</h1>
+  <p class="lead">A curated selection of the best hair care products to maintain your style at home.</p>
+  <hr>
+  <div class="alert alert-info" role="alert">
+    Product listings are coming soon! We will be displaying our products here once the admin panel is complete.
+  </div>
 {% endblock %}
