--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 
 {% block title %}
-About Us - Haircut Saloon
+Sobre Nós - Whair Studio
 {% endblock %}
 
 {% block content %}
   <img src="{{ url_for('static', filename='images/logo.png') }}" class="img-fluid rounded d-block mx-auto mb-4" style="max-width: 350px;" alt="Haircut Saloon Logo">
-  <h1>About Our Saloon</h1>
-  <p class="lead">Founded in 2010, our saloon has been the go-to destination for premium hair care in the community.</p>
-  <p>Our mission is to provide an unparalleled styling experience, combining artistic vision with a deep commitment to our clients' satisfaction. We believe that a great haircut can not only change your look but also boost your confidence. Our team of expert stylists stays ahead of the latest trends and techniques to offer you a wide range of services, from classic cuts to modern color treatments.</p>
-  <p>We are dedicated to creating a welcoming and relaxing atmosphere where you can feel comfortable and pampered. Thank you for trusting us with your style.</p>
+  <h1>Sobre Nosso Studio</h1>
+  <p class="lead">Fundado em 2010, nosso salão é o destino preferido para cuidados capilares premium na comunidade.</p>
+  <p>Nossa missão é proporcionar uma experiência de estilo incomparável, combinando visão artística com um profundo compromisso com a satisfação de nossos clientes. Acreditamos que um ótimo corte de cabelo pode não apenas mudar seu visual, mas também aumentar sua confiança. Nossa equipe de cabeleireiros especialistas está sempre à frente das últimas tendências e técnicas para oferecer uma ampla gama de serviços, desde cortes clássicos até tratamentos de coloração modernos.</p>
+  <p>Nos dedicamos a criar um ambiente acolhedor e relaxante, onde você possa se sentir confortável e mimado. Agradecemos por confiar seu estilo a nós.</p>
 {% endblock %}
