--- a/app/templates/admin/add_product.html
+++ b/app/templates/admin/add_product.html
@@ -12,7 +12,7 @@
                 {{ form.hidden_tag() }}
                 
                 <fieldset class="form-group">
-                    <legend class="border-bottom mb-4">Add a New Product</legend>
+                    <legend class="border-bottom mb-4">Adicionar novo produto</legend>
                     
                     <div class="form-group">
                         {{ form.name.label(class="form-control-label") }}
