--- a/app/templates/admin/dashboard.html
+++ b/app/templates/admin/dashboard.html
@@ -1,22 +1,22 @@
 {% extends "base.html" %}
 
-{% block title %}Admin Dashboard{% endblock %}
+{% block title %}Painel de Gestão{% endblock %}
 
 {% block content %}
     <div class="d-flex justify-content-between align-items-center mb-4">
-        <h1>Product Management</h1>
+        <h1>Gestão de Produtos</h1>
         <div>
-            <a href="{{ url_for('admin.add_product') }}" class="btn btn-primary">Add New Product</a>
+            <a href="{{ url_for('admin.add_product') }}" class="btn btn-primary">Adicionar Produto</a>
         </div>
     </div>
     
     <table class="table table-hover">
         <thead>
             <tr>
-                <th scope="col">Image</th>
-                <th scope="col">Name</th>
-                <th scope="col">Price</th>
-                <th scope="col">Actions</th>
+                <th scope="col">Imagem</th>
+                <th scope="col">Nome</th>
+                <th scope="col">Preço</th>
+                <th scope="col">Ações</th>
             </tr>
         </thead>
         <tbody>
