--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 
-    <title>{% block title %}Saloon Website{% endblock %}</title>
+    <title>{% block title %}Whair Studio{% endblock %}</title>
   </head>
   <body>
 
@@ -22,27 +21,27 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('main.home') }}">Home</a>
+            <a class="nav-link" href="{{ url_for('main.home') }}">Início</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('main.about') }}">About</a>
+            <a class="nav-link" href="{{ url_for('main.about') }}">Sobre Nós</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('main.products') }}">Products</a>
+            <a class="nav-link" href="{{ url_for('main.products') }}">Produtos</a>
           </li>
         </ul>
         <ul class="navbar-nav">
             {% if current_user.is_authenticated %}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Hello, {{ current_user.username }}
+                        Olá, {{ current_user.username }}
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                         {% if current_user.is_admin %}
-                            <a class="dropdown-item" href="{{ url_for('admin.dashboard') }}">Admin Dashboard</a>
+                            <a class="dropdown-item" href="{{ url_for('admin.dashboard') }}">Painel de Administração</a>
                             <div class="dropdown-divider"></div>
                         {% endif %}
-                        <a class="dropdown-item" href="{{ url_for('auth.logout') }}" onclick="return confirm('Are you sure you want to log out?');">Logout</a>
+                        <a class="dropdown-item" href="{{ url_for('auth.logout') }}" onclick="return confirm('Tem certeza de que deseja sair?');">Logout</a>
                     </div>
                 </li>
             {% else %}
@@ -50,7 +49,7 @@
                     <a class="nav-link" href="{{ url_for('auth.login') }}">Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('auth.register') }}">Register</a>
+                    <a class="nav-link" href="{{ url_for('auth.register') }}">Criar Conta</a>
                 </li>
             {% endif %}
         </ul>
@@ -73,6 +72,41 @@
       {% block content %}
       {% endblock %}
     </main>
+
+    <footer class="bg-light text-center text-lg-start mt-auto">
+      <div class="container p-4">
+        <div class="row">
+          <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+            <h5 class="text-uppercase">Whair Studio</h5>
+            <p>
+              Fornecendo serviços de estilo e cuidados com os cabelos de primeira linha desde 2010. Seu estilo, nossa paixão.
+            </p>
+          </div>
+    
+          <div class="col-lg-6 col-md-12 mb-4 mb-md-0 text-center">
+            <h5 class="text-uppercase">Siga-nos</h5>
+            <div class="mt-3">
+              <a href="#" class="btn btn-outline-primary btn-floating m-1" role="button">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+    
+              <a href="#" class="btn btn-outline-danger btn-floating m-1" role="button">
+                <i class="fab fa-instagram"></i>
+              </a>
+    
+              <a href="#" class="btn btn-outline-success btn-floating m-1" role="button">
+                <i class="fab fa-whatsapp"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    
+      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        © {{ now.year }} Copyright:
+        <a class="text-dark" href="{{ url_for('main.home') }}">Whair Studio</a>
+      </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
