--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-Login - Haircut Saloon
+Login - Whair Studio
 {% endblock %}
 
 {% block content %}
@@ -61,7 +61,7 @@ Login - Haircut Saloon
         </div>
         <div class="border-top pt-3">
             <small class="text-muted">
-                Need An Account? <a class="ml-2" href="{{ url_for('auth.register') }}">Sign Up Now</a>
+                Precisa de uma conta? <a class="ml-2" href="{{ url_for('auth.register') }}">Registre-se agora</a>
             </small>
         </div>
     </div>
