--- a/app/templates/products.html
+++ b/app/templates/products.html
@@ -1,14 +1,37 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 
-{% block title %}
-Our Products - Haircut Saloon
-{% endblock %}
+{% block title %}Nossos Produtos{% endblock %}
 
 {% block content %}
-  <h1>Our Products</h1>
-  <p class="lead">A curated selection of the best hair care products to maintain your style at home.</p>
-  <hr>
-  <div class="alert alert-info" role="alert">
-    Product listings are coming soon! We will be displaying our products here once the admin panel is complete.
-  </div>
+    <div class="container py-5">
+        <h1 class="text-center mb-5">Nossos Produtos</h1>
+        
+        <div class="row">
+            {% for product in products %}
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="card h-100">
+                        <img src="{{ url_for('static', filename='product_pics/' + product.image_file) }}" class="card-img-top" alt="{{ product.name }}">
+                        
+                        <div class="card-body d-flex flex-column">
+                            <h5 class="card-title">{{ product.name }}</h5>
+                            
+                            <h6 class="card-subtitle mb-2 text-muted">${{ "%.2f"|format(product.price) }}</h6>
+                            
+                            <p class="card-text">
+                                {{ product.description }}
+                            </p>
+                            
+                            <a href="{{ url_for('main.product_detail', product_id=product.id) }}" class="btn btn-primary mt-auto">Mais Detalhes</a>
+                        </div>
+                    </div>
+                </div>
+            {% else %}
+                <div class="col">
+                    <div class="alert alert-info">
+                        Nenhum produto disponível no momento. Volte mais tarde!
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
 {% endblock %}
